# aioairctrl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
aioairctrl/: __init__.py  cli.py  device_info.py  discovery.py  setup_wizard.py
aioairctrl/coap/: client.py
examples/: example.py
philips_airctrl/: __init__.py  __main__.py  cli.py  device_info.py  discovery.py  setup_wizard.py
philips_airctrl/coap/: __init__.py  aiocoap_monkeypatch.py  client.py  encryption.py
tests/: __init__.py  test_cli.py  test_client.py  test_encryption.py
